update admin cluster working

--- a/config-files/admin-cluster.yaml
+++ b/config-files/admin-cluster.yaml
@@ -26,12 +26,14 @@ vCenter:
       entry: vCenter
   # Provide the name for the persistent disk to be used by the deployment (ending
   # in .vmdk). Any directory in the supplied path must be created before deployment
-  dataDisk: "anthos-on-prem-poc.vmdk"
+  dataDisk: anthos-on-prem-demo/anthos.vmdk 
 # (Required) Network configuration
 network:
   hostConfig:
     dnsServers:
       - 172.23.5.5
+      - 172.23.0.8
+      - 172.23.0.9
   #   # List of NTP servers
     ntpServers:
       - "0.ubuntu.pool.ntp.org"
@@ -60,7 +62,7 @@ loadBalancer:
   # (Required) The VIPs to use for load balancing
   vips:
     # Used to connect to the Kubernetes API
-    controlPlaneVIP: "172.123.128.95"
+    controlPlaneVIP: 172.23.128.95
     # # (Optional) Used for admin cluster addons (needed for multi cluster features). Must
     # # be the same across clusters
     # addonsVIP: ""
@@ -101,7 +103,7 @@ loadBalancer:
     # be between 1-255 and unique in a VLAN.
     vrid: 1
     # (Required) The IP announced by the master of Seesaw group
-    masterIP: 172.123.128.96
+    masterIP: 172.23.128.96
     # (Required) The number CPUs per machine
     cpus: 2
     # (Required) Memory size in MB per machine
