--- a/kubernetes-manifests/connect-gateway/admin-permission.yaml
+++ b/kubernetes-manifests/connect-gateway/admin-permission.yaml
@@ -7,6 +7,8 @@ subjects:
   name: 574816103089@cloudbuild.gserviceaccount.com
 - kind: User
   name: admin@zaynabs.altostrat.com
+- kind: User
+  name: shanilevy@zaynabs.altostrat.com
 roleRef:
   kind: ClusterRole
   name: cluster-admin
